<resources>
    <string name="app_name">Tue APP</string>
    <string name="pin_icon_label">Map section</string>
    <string name="book_icon_label">Online book section</string>
    <string name="event_icon_label">Event section</string>
    <string name="settings_icon_label">Settings</string>
    <string name="account_icon_label">Account</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Full Name:</string>
    <string name="email">Your Email Address:</string>
    <string name="password">User Password: *******</string>
    <string name="study">Study:</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="user_manual">User manual</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="maps">Maps</string>
    <string name="book">Book</string>
    <string name="events">Events</string>
    <string name="settings">Settings</string>
    <string name="account">Your Account</string>
    <string name="invited_events">Invited events</string>
    <string name="accepted_events">Accepted events</string>
    <string name="title">CardTitle</string>
    <string name="secondary_text">Short description event</string>
    <string name="supporting_text">Long description event</string>
    <string name="action_1">Accept event</string>
    <string name="action_2">deny event</string>
    <string name="eventName">Event name*</string>
    <string name="Location">Location</string>
    <string name="dateTime">Date and time*</string>
    <string name="shortDesc">Short description*</string>
    <string name="longDesc">Long description</string>
    <string name="invited">Invited emails</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="forward_button">forward button</string>
    <string name="accepted_events_eventtab">Accepted Events</string>
    <string name="invited_events_eventtab">Invited Events</string>
    <string name="create_event">Create event</string>
    <string name="Account">Account</string>
</resources>
