<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            app:startIconContentDescription="@string/eventName"
            app:startIconDrawable="@drawable/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eventName"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#616161" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationField"
            app:startIconContentDescription="@string/Location"
            app:startIconDrawable="@drawable/add_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Location"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#616161" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timeField"
            app:startIconContentDescription="@string/dateTime"
            app:startIconDrawable="@drawable/add_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateTime"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shortDesc"
            app:startIconContentDescription="@string/shortDesc"
            app:startIconDrawable="@drawable/short_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shortDesc"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Descr"
            app:startIconContentDescription="@string/longDesc"
            app:startIconDrawable="@drawable/long_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longDesc"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/invitedList"
            app:startIconContentDescription="@string/invited"
            app:startIconDrawable="@drawable/add_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/invited"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</FrameLayout>